--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,4 +27,5 @@ jobs:
           git config --global user.name "README-bot"
           git add -A
           git commit -m "Updated articles" || exit 0
+          git pull
           git push origin HEAD:main
