--- a/action.yml
+++ b/action.yml
@@ -5,6 +5,10 @@ inputs:
     description: 'Who to greet'
     required: true
     default: 'World'
+  token: ${{secrets.GITHUB_TOKEN}}
+    description: 'github token'
+    required: true
+    default: ''
 outputs:
   time: # id of output
     description: 'The time we greeted you'
