--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,5 +29,5 @@ jobs:
           git config --global user.email "readme-bot@example.com"
           git config --global user.name "README-bot"
           git add -A
-          git commit -m "Updated articles" || exit 0
+          git commit -m "Updated README.md" || exit 0
           git push origin HEAD:${{ steps.hello.outputs.head-branch-name }} --force
